# fastapi_react_website

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  个人博客项目1.0发布文章.md
.vercel/: project.json
be/: Makefile  README.md  alembic.ini  main.py  pyproject.toml  run.py
be/bluenote/: security.py
be/bluenote/alembic/: env.py
be/bluenote/alembic/versions/: 59e827f8761d_add_users_table.py  5a4463440d74_remove_is_published_field_from_blogs_.py  85edf7a928d1_change_photos_tags_and_url_list_from_.py  b03e07d4530a_change_tags_field_from_json_to_text.py  cd222181b027_update_photos_table_replace_url_with_.py  e33ed8b10be4_initial_migration_with_all_tables.py
be/bluenote/api/: exceptions.py  middlewares.py
be/bluenote/config/: config.py
be/bluenote/mixins/: active_record.py  timestamp.py
be/bluenote/routes/: auth.py  blog.py  chat.py  contact.py  photo.py  routes.py
be/bluenote/schemas/: __init__.py  blogs.py  common.py  contacts.py  photos.py
be/bluenote/server/: app.py  db.py  deps.py
be/bluenote/services/: openai.py
be/bluenote/utils/: logger.py
db/: bluenote.db
fe/: .env.deployment.example  .env.example  .eslintrc.json  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CONFIG.md  IMAGE_URL_ISSUE_ANALYSIS.md  LICENSE  README.md  SECURITY.md  globals.css  jest.config.js  jest.setup.js  lighthouserc.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  test-production-images.md
fe/app/: ClientLayout.tsx  globals.css  layout.tsx  page.tsx
fe/hooks/: use-auth.ts  use-image-lazy-loading.ts  use-photo-api.ts  (+1 more)
(+49 files in other folders)
