[project]
name = "bluenote"
version = "0.1.0"
description = "A modern blog system built with FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "openai==1.86.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "cors==1.0.1",
    "fastapi-cors==0.0.6",
    "PyJWT==2.8.0",
    "argon2-cffi==23.1.0",
    "sqlmodel==0.0.14",
    "alembic==1.13.1",
    "fastapi-cdn-host==0.9.1",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "aiosqlite==0.20.0",
    "aiohttp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[project.scripts]
bluenote = "main:main"